Comment background colours. Fixed more spacing issues.

--- a/sass/arrows.scss
+++ b/sass/arrows.scss
@@ -68,7 +68,7 @@
 
 .thing.comment {
 	.midcol {
-		margin-top: 9px;
+		//margin-top: 0px;
 		width: 28px !important;
 	}
 
